--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
     "webpack-dev-server": "^3.1.8"
   },
   "dependencies": {
+    "prop-types": "^15.7.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
-    "react-hot-loader": "^4.3.11"
+    "react-hot-loader": "^4.3.11",
+    "react-redux": "^7.2.4",
+    "react-router-dom": "^5.2.0"
   }
 }
